[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfspider"
version = "1.7.3"
description = "Cloudflare Workers proxy IP pool client with stealth mode, anti-detection, async, HTTP/2, TLS fingerprint, browser, mirror and IP map"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "violettools", email = "violet@violetteam.cloud"}
]
keywords = ["cloudflare", "workers", "proxy", "ip", "pool", "crawler", "spider", "browser", "playwright", "vless", "httpx", "http2", "async", "curl_cffi", "tls", "fingerprint", "impersonate", "map", "visualization", "maplibre", "mirror", "offline", "beautifulsoup", "stealth", "anti-detection", "anti-bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.20.0",
    "playwright>=1.40.0",
    "httpx[http2]>=0.25.0",
    "curl_cffi>=0.5.0",
    "beautifulsoup4>=4.9.0",
]

[project.scripts]
cfspider = "cfspider.cli:main"

[project.urls]
Homepage = "https://spider.violetteam.cloud"
Repository = "https://github.com/violettoolssite/CFspider"
Documentation = "https://spider.violetteam.cloud"
Issues = "https://github.com/violettoolssite/CFspider/issues"
